# vidaptive

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
src/: config.rs  lib.rs  session.rs  types.rs
src/cc/: copa.rs  mod.rs  noop.rs  rocc.rs
src/encoder_ctrl/: alpha.rs  mod.rs  safeguards.rs
src/metrics/: frame_timing.rs  mod.rs  percentile.rs  video_bitrate.rs
src/transport/: mod.rs  pacer.rs
src/transport/filler/: dummy.rs  mod.rs
